Fixed digilocker failed alignment

--- a/react_webviews/src/kyc/Digilocker/Digilocker.scss
+++ b/react_webviews/src/kyc/Digilocker/Digilocker.scss
@@ -48,6 +48,8 @@
 }
 
 #digilocker-failed {
+  padding-bottom: 100px;
+
   .page-title {
     font-weight: bold;
     font-size: 20px;
@@ -59,8 +61,7 @@
     object-fit: contain;
     min-width: 314px;
     max-width: 100%;
-    margin: 0 auto;
-    margin: 30px 0 20px 0;
+    margin: 30px auto 20px auto;
   }
 
   .body-text1 {
